--- a/index.html
+++ b/index.html
@@ -1,43 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yeakub | Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <!-- Roboto font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
 
-</head>
-<body>
+  <body>
     <!-- navbar -->
     <nav>
-        <div class="left">
-            <a href="#home">
-                <img src="images/logo.png" alt="logo" class="logo">
-                <span>My Portfolio</span>
-            </a>
-        </div>
-        <div class="right">
-            <a href="#skills">
-                <i class="fa-solid fa-code"></i>
-                <span>Skills</span>
-            </a>
-            <a href="#projects">
-                <i class="fa-solid fa-diagram-project"></i>
-                <span>Projects</span>
-            </a>
-            <a href="#contacts">
-                <i class="fa-solid fa-address-book"></i>
-                <span>Contacts</span>
-            </a>
-        </div>
+      <div class="left">
+        <a href="#home">
+          <img src="images/logo.png" alt="logo" class="logo" />
+          <span>Portfolio</span>
+        </a>
+      </div>
+      <div class="right">
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#certifications">Certifications</a>
+        <a href="#research">Research</a>
+        <a href="#contact">Contact</a>
+      </div>
     </nav>
-</body>
+
+    <main>
+      <section class="hero">
+        <div class="hero-text">
+          <h1>Yeakub Sadlil Bhuiyan</h1>
+          <h2>Python Developer | Machine Learning Engineer</h2>
+          <p>
+            Seeking an entry-level Python Developer role to utilize my 1-year professional experience in Data Science, Machine Learning and skills in Python, Django and Competitive Programming.
+          </p>
+          <div class="contact-info">
+            <span><i class="fa fa-envelope"></i>yakubsadlil@gmail.com</span>
+            <span><i class="fa fa-location-dot"></i>Dhaka, Bangladesh</span>
+            <span><i class="fa fa-phone"></i>+8801609370655</span>
+          </div>
+          <div class="links">
+            <a href="https://github.com/YeakubSadlil">
+              <i class="fa-brands fa-github"></i>
+              <span>Github</span>
+            </a>
+            <a href="https://www.linkedin.com/in/yeakub-sadlil/">
+              <i class="fa-brands fa-linkedin"></i>
+              <span>LinkedIn</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="headshot">
+          <img src="images/Yeakub.jpg" alt="profile photo" />
+        </div>
+      </section>
+
+      <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>
+          I'm a passionate Python Developer and Machine Learning Engineer with hands-on experience in data science, deep learning, and backend development. I thrive in collaborative environments and love solving challenging problems through code and data.
+        </p>
+      </section>
+
+      <section id="experience" class="section">
+        <h2>Experience</h2>
+        <div class="timeline">
+          <div class="timeline-item">
+            <h3>Software Support Engineer <span>@ Combined Military Hospital</span></h3>
+            <span class="date">Oct 2024 – Present | Dhaka Cantonment, BD | Full-time</span>
+            <ul>
+              <li>Database Management: Query and analyze data from Oracle 19c database to generate reports and insights for hospital operations.</li>
+              <li>Software Support & Training: Train army officers and doctors on using the hospital’s software efficiently, ensuring smooth operations.</li>
+            </ul>
+
+            <h3>Python Quantitative Analyst @ Anchor Block Technology</span></h3>
+            <span class="date">Nov 2023 – May 2024 | Dhaka, BD | Full-time</span>
+            <ul>
+              <li>Analyzed financial data to identify trends, risks, and opportunities using machine learning.</li>
+              <li>Backtested trading data to find the trend of the stock market.</li>
+            </ul>
+
+            <h3>Junior Machine Learning Engineer @ Omdena</span></h3>
+            <span class="date">May 2023 – Oct 2023 | Palo Alto, CA, USA | Remote Part-time</span>
+            <ul>
+              <li>Led a successful CNN project with 99.21% accuracy to detect mango leaf diseases in real-time and deployed the model.</li>
+              <li>Led and managed open-source AI/ML projects for dynamic global teams of over 25 individuals to develop solutions.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="projects">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+          <div class="project-card">
+            <h3>Ensemble Strategy for Backtesting Stock Price</h3>
+            <p>
+              An optimized ensemble strategy for backtesting stock prices that
+              outperformed several individual technical indicators and the
+              benchmark SP500 using LSTM Deep Learning Model.
+            </p>
+            <a href="https://github.com/YeakubSadlil/quizbit" target="_blank">Project Link</a>
+          </div>
+
+          <div class="project-card">
+            <h3>QuizBit MCQ API</h3>
+            <p>
+              A Django REST based MCQ Simulation API with user management,
+              question handling, quiz exam and submission history tracking.
+            </p>
+            <a href="https://github.com/YeakubSadlil/Ensemble_backtesting_stock_market" target="_blank">Project Link</a>
+          </div>
+      </section>
+
+      <section id="skills" class="section">
+        <h2>Skills</h2>
+        <div class="skills-container">
+          <div>
+            <ul class="skills-list">
+              <li>Python</li>
+              <li>C/C++</li>
+              <li>Django</li>
+              <li>Competitive Programming</li>
+              <li>Data Structures, Algorithms</li>
+              <li>Linux (Debian)</li>
+              <li>Git/Github</li>
+              <li>TensorFlow/Keras</li>
+              <li>Pandas</li>
+              <li>SQL</li>
+              <li>OOP</li>
+              <li>Computer Vision</li>
+              <li>Machine Learning</li>
+            </ul>
+          </div>
+    </main>
+
+    <footer class="footer">
+      <p>&copy; 2025 Yeakub Sadlil Bhuiyan. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
