--- a/index.html
+++ b/index.html
@@ -85,26 +85,31 @@
         <h2>Experience</h2>
         <div class="timeline">
           <div class="timeline-item">
-            <h3>Software Support Engineer <span>@ Combined Military Hospital</span></h3>
-            <span class="date">Oct 2024 – Present | Dhaka Cantonment, BD | Full-time</span>
-            <ul>
-              <li>Database Management: Query and analyze data from Oracle 19c database to generate reports and insights for hospital operations.</li>
-              <li>Software Support & Training: Train army officers and doctors on using the hospital’s software efficiently, ensuring smooth operations.</li>
-            </ul>
+            <div class="transition-class">
+              <h3>Software Support Engineer <span>@ Combined Military Hospital</span></h3>
+              <span class="date">Oct 2024 – Present | Dhaka Cantonment, BD | Full-time</span>
+              <ul>
+                <li>Database Management: Query and analyze data from Oracle 19c database to generate reports and insights for hospital operations.</li>
+                <li>Software Support & Training: Train army officers and doctors on using the hospital’s software efficiently, ensuring smooth operations.</li>
+              </ul>
+            </div>
 
-            <h3>Python Quantitative Analyst @ Anchor Block Technology</span></h3>
-            <span class="date">Nov 2023 – May 2024 | Dhaka, BD | Full-time</span>
-            <ul>
-              <li>Analyzed financial data to identify trends, risks, and opportunities using machine learning.</li>
-              <li>Backtested trading data to find the trend of the stock market.</li>
-            </ul>
+            <div class="transition-class">
+              <h3>Python Quantitative Analyst @ Anchor Block Technology</span></h3>
+              <span class="date">Nov 2023 – May 2024 | Dhaka, BD | Full-time</span>
+              <ul>
+                <li>Analyzed financial data to identify trends, risks, and opportunities using machine learning.</li>
+                <li>Backtested trading data to find the trend of the stock market.</li>
+              </ul>
+            </div>
 
+            <div class="transition-class">
             <h3>Junior Machine Learning Engineer @ Omdena</span></h3>
-            <span class="date">May 2023 – Oct 2023 | Palo Alto, CA, USA | Remote Part-time</span>
-            <ul>
-              <li>Led a successful CNN project with 99.21% accuracy to detect mango leaf diseases in real-time and deployed the model.</li>
-              <li>Led and managed open-source AI/ML projects for dynamic global teams of over 25 individuals to develop solutions.</li>
-            </ul>
+              <span class="date">May 2023 – Oct 2023 | Palo Alto, CA, USA | Remote Part-time</span>
+              <ul>
+                <li>Led a successful CNN project with 99.21% accuracy to detect mango leaf diseases in real-time and deployed the model.</li>
+                <li>Led and managed open-source AI/ML projects for dynamic global teams of over 25 individuals to develop solutions.</li>
+              </ul>
           </div>
         </div>
       </section>
@@ -112,7 +117,7 @@
       <section class="section" id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
-          <div class="project-card">
+          <div class="project-card transition-class">
             <h3>Ensemble Strategy for Backtesting Stock Price</h3>
             <p>
               An optimized ensemble strategy for backtesting stock prices that
@@ -122,7 +127,7 @@
             <a href="https://github.com/YeakubSadlil/quizbit" target="_blank">Project Link</a>
           </div>
 
-          <div class="project-card">
+          <div class="project-card transition-class">
             <h3>QuizBit MCQ API</h3>
             <p>
               A Django REST based MCQ Simulation API with user management,
